EXTRA_DIST = \
	libvdemgmt/asyncrecv.rc \
	libvdemgmt/sendcmd.rc \
	libvdemgmt/openmachine.rc \
	libvdemgmt/closemachine.rc \
	vde_autolink-howto \
	qemu-vde-HOWTO \
	vdecmd \
	freebsd_tap \
	bochs/eth_vde.cc \
	bochs/Makefile.am \
	bochs/eth.cc.diff \
	README.UML \
	README.bochs \
	README.qemu \
	README.slirpvde \
	README.vde_over_ns \
